--- a/BELibrary/BELibrary.csproj
+++ b/BELibrary/BELibrary.csproj
@@ -174,6 +174,10 @@
     <Compile Include="Migrations\202412050857483_sth.Designer.cs">
       <DependentUpon>202412050857483_sth.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\202412131908529_sth1.cs" />
+    <Compile Include="Migrations\202412131908529_sth1.Designer.cs">
+      <DependentUpon>202412131908529_sth1.cs</DependentUpon>
+    </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Models\CinemaRoomDto.cs" />
     <Compile Include="Models\ItemModel.cs" />
@@ -229,6 +233,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Migrations\202412050857483_sth.resx">
       <DependentUpon>202412050857483_sth.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\202412131908529_sth1.resx">
+      <DependentUpon>202412131908529_sth1.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
