fix booking ticket

--- a/CinemaOnline/Web.config
+++ b/CinemaOnline/Web.config
@@ -142,7 +142,7 @@
     </providers>
   </entityFramework>
   <connectionStrings>
-    <add name="CinemaOnlineDbContext" connectionString="data source=DESKTOP-UG4BEPP;initial catalog=CinemaOnline;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework" providerName="System.Data.SqlClient" />
+    <add name="CinemaOnlineDbContext" connectionString="data source=LAPTOP-JUJKPVSP;initial catalog=CinemaOnline;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework" providerName="System.Data.SqlClient" />
   </connectionStrings>
   <!--<connectionStrings>
     <add name="CinemaOnlineDbContext" connectionString="data source=zmovie.database.windows.net;initial catalog=CinemaOnline; User ID=phucnd;Password=123qwe!@#;Connect Timeout=60;Encrypt=True;TrustServerCertificate=False;ApplicationIntent=ReadWrite;MultiSubnetFailover=False;MultipleActiveResultSets=True;App=EntityFramework" providerName="System.Data.SqlClient" />
