--- a/BELibrary/App.config
+++ b/BELibrary/App.config
@@ -10,7 +10,7 @@
     </providers>
   </entityFramework>
   <connectionStrings>
-    <add name="CinemaOnlineDbContext" connectionString="data source=DESKTOP-UG4BEPP;initial catalog=CinemaOnline;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework" providerName="System.Data.SqlClient" />
+    <add name="CinemaOnlineDbContext" connectionString="data source=LAPTOP-JUJKPVSP;initial catalog=CinemaOnline;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework" providerName="System.Data.SqlClient" />
   </connectionStrings>
   <runtime>
     <loadFromRemoteSources enabled="true" />
