--- a/CinemaOnline/Web.config
+++ b/CinemaOnline/Web.config
@@ -143,13 +143,13 @@
   </entityFramework>
 
 	<!--KhanhConnection-->
-	<!--connectionStrings>
-    <add name="CinemaOnlineDbContext" connectionString="data source=LAPTOP-JUJKPVSP;initial catalog=CinemaOnline;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework" providerName="System.Data.SqlClient" />
-  </connectionStrings>
-	<KhiemConnection-->
 	<connectionStrings>
-		<add name="CinemaOnlineDbContext" connectionString="data source=DESKTOP-UG4BEPP;initial catalog=CinemaOnline;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework" providerName="System.Data.SqlClient" />
+		<add name="CinemaOnlineDbContext" connectionString="data source=LAPTOP-JUJKPVSP;initial catalog=CinemaOnline;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework" providerName="System.Data.SqlClient" />
 	</connectionStrings>
+	<!--<KhiemConnection-->
+	<!--<connectionStrings>
+		<add name="CinemaOnlineDbContext" connectionString="data source=DESKTOP-UG4BEPP;initial catalog=CinemaOnline;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework" providerName="System.Data.SqlClient" />
+	</connectionStrings>-->
 
 
 </configuration>
