--- a/BELibrary/App.config
+++ b/BELibrary/App.config
@@ -9,9 +9,13 @@
       <provider invariantName="System.Data.SqlClient" type="System.Data.Entity.SqlServer.SqlProviderServices, EntityFramework.SqlServer" />
     </providers>
   </entityFramework>
+	<!--KhanhConnection>
   <connectionStrings>
     <add name="CinemaOnlineDbContext" connectionString="data source=LAPTOP-JUJKPVSP;initial catalog=CinemaOnline;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework" providerName="System.Data.SqlClient" />
-  </connectionStrings>
+  </connectionStrings-->
+	<connectionStrings>
+		<add name="CinemaOnlineDbContext" connectionString="data source=DESKTOP-UG4BEPP;initial catalog=CinemaOnline;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework" providerName="System.Data.SqlClient" />
+	</connectionStrings>
   <runtime>
     <loadFromRemoteSources enabled="true" />
     <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
