--- a/CinemaOnline/Web.config
+++ b/CinemaOnline/Web.config
@@ -144,12 +144,11 @@
 
 	<!--KhanhConnection-->
 	<connectionStrings>
-		<add name="CinemaOnlineDbContext" connectionString="data source=LAPTOP-JUJKPVSP;initial catalog=CinemaOnline;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework" providerName="System.Data.SqlClient" />
+		<add name="CinemaOnlineDbContext" connectionString="data source=LAPTOP-LQGE3DRI\SQLEXPRESS;initial catalog=CinemaOnline;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework" providerName="System.Data.SqlClient" />
 	</connectionStrings>
 	<!--<KhiemConnection-->
 	<!--<connectionStrings>
 		<add name="CinemaOnlineDbContext" connectionString="data source=DESKTOP-UG4BEPP;initial catalog=CinemaOnline;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework" providerName="System.Data.SqlClient" />
 	</connectionStrings>-->
-
 
 </configuration>
